implement Swagger documentation for GetTasks API,add GetToDo controller and change pridcution server URL
