# src/config/swagger.yaml
@@ -5,7 +5,7 @@ info:
   version: 0.1.9
 
 servers:
-  - url: https://dimitrikokhtashvili.site/
+  - url: https://to-do-app.dimitrikokhtashvili.site/
     description: production server
   - url: http://localhost:4000
     description: local server
@@ -73,7 +73,7 @@ paths:
                     type: string
                     example: "Title and text are required."
 
-  /api/getToDos:
+  /api/getToDo:
     get:
       tags:
         - Todos
